apps/graphql/store-locator/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jade-graphql-store-locator
  namespace: grocery-dev
  labels:
    app: jade-graphql-store-locator
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-production-dns'
    certmanager.k8s.io/acme-challenge-type: 'dns01'
    certmanager.k8s.io/acme-dns01-provider: 'gcp-clouddns-provider'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*.in.pscloudhub.com'
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - graphql-store-locator.instg.pscloudhub.com
      secretName: graphql-instg-tls
  rules:
    - host: graphql-store-locator.instg.pscloudhub.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jade-graphql-store-locator
              servicePort: 80
